tests/ui/attributes/no-sanitize.stderr
error: `#[no_sanitize(memory)]` should be applied to a function
  --> $DIR/no-sanitize.rs:7:19
   |
LL |       #[no_sanitize(memory)]
   |                     ^^^^^^
LL | /     {
LL | |         1
LL | |     };
   | |_____- not a function

error: `#[no_sanitize(memory)]` should be applied to a function
  --> $DIR/no-sanitize.rs:13:15
   |
LL | #[no_sanitize(memory)]
   |               ^^^^^^
LL | type InvalidTy = ();
   | -------------------- not a function

error: `#[no_sanitize(memory)]` should be applied to a function
  --> $DIR/no-sanitize.rs:16:15
   |
LL | #[no_sanitize(memory)]
   |               ^^^^^^
LL | mod invalid_module {}
   | --------------------- not a function

error: `#[no_sanitize(memory)]` should be applied to a function
  --> $DIR/no-sanitize.rs:20:27
   |
LL |     let _ = #[no_sanitize(memory)]
   |                           ^^^^^^
LL |     (|| 1);
   |     ------ not a function

error: `#[no_sanitize(memory)]` should be applied to a function
  --> $DIR/no-sanitize.rs:24:15
   |
LL | #[no_sanitize(memory)]
   |               ^^^^^^
LL | struct F;
   | --------- not a function

error: `#[no_sanitize(memory)]` should be applied to a function
  --> $DIR/no-sanitize.rs:27:15
   |
LL |   #[no_sanitize(memory)]
   |                 ^^^^^^
LL | / impl F {
LL | |     #[no_sanitize(memory)]
LL | |     fn valid(&self) {}
LL | | }
   | |_- not a function

error: `#[no_sanitize(memory)]` should be applied to a function
  --> $DIR/no-sanitize.rs:33:24
   |
LL | #[no_sanitize(address, memory)]
   |                        ^^^^^^
LL | static INVALID : i32 = 0;
   | ------------------------- not a function

error: `#[no_sanitize(...)]` should be applied to a function
  --> $DIR/no-sanitize.rs:42:15
   |
LL | #[no_sanitize("address")]
   |               ^^^^^^^^^
...
LL | static VALID2 : i32 = 0;
   | ------------------------ not a function

error: invalid argument for `no_sanitize`
  --> $DIR/no-sanitize.rs:42:15
   |
LL | #[no_sanitize("address")]
   |               ^^^^^^^^^
   |
   = note: expected one of: `address`, `cfi`, `hwaddress`, `kcfi`, `memory`, `memtag`, `shadow-call-stack`, or `thread`

error: aborting due to 9 previous errors

